Dark theme added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/components/theme-provider.jsx"  ],
   "exclude": ["node_modules"]
 }
